--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 					</ul>
 				</li>
 			
-				<li><a href="">SERVICES</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="otros/about.html">ABOUT</a></li>
 				<li><a href="">CONTACT</a></li>
 				<li><a href="">FAQ</a></li>
 					
