--- a/tops/books.html
+++ b/tops/books.html
@@ -1,7 +1,7 @@
 <!DOCTYPE <html></html>
 <html>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=0.01">
 <head>
 	<title>
 	PEOPLE
@@ -33,8 +33,7 @@
 					</ul>
 				</li>
 		
-				<li><a href="">SERVICES</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="../otros/about.html">ABOUT</a></li>
 				<li><a href="">CONTACT</a></li>
 				<li><a href="">FAQ</a></li>
 					
