--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
 					</ul>
 				</li>
 			
-				<li><a href="">SERVICES</a></li>
-				<li><a href="">ABOUT</a></li>
-				<li><a href="">CONTACT</a></li>
-				<li><a href="">FAQ</a></li>
+				<li><a href="otros/about.html">ABOUT</a></li>
+				<li><a href="otros/contact.html">CONTACT</a></li>
+				<li><a href="otros/faq.html">FAQ</a></li>
 					
 			</ul>
 
