--- a/tops/youtubers.html
+++ b/tops/youtubers.html
@@ -1,10 +1,10 @@
 <!DOCTYPE <html></html>
 <html>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=0.01">
 <head>
 	<title>
-	PEOPLE
+	YOUTUBERS
 	</title>
 	<link rel="stylesheet" type="text/css" href="../css/nav.css">
 	<link rel="stylesheet" type="text/css" href="../css/youtubers.css">
@@ -33,10 +33,9 @@
 					</ul>
 				</li>
 			
-				<li><a href="">SERVICES</a></li>
-				<li><a href="">ABOUT</a></li>
-				<li><a href="">CONTACT</a></li>
-				<li><a href="">FAQ</a></li>
+				<li><a href="../otros/about.html">ABOUT</a></li>
+				<li><a href="../otros/contact.html">CONTACT</a></li>
+				<li><a href="../otros/faq.html">FAQ</a></li>
 					
 			</ul>
 
