--- a/tops/books.html
+++ b/tops/books.html
@@ -1,10 +1,10 @@
-<!DOCTYPE <html></html>
+<!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=0.01">
 <head>
 	<title>
-	PEOPLE
+	BOOKS
 	</title>
 	<link rel="stylesheet" type="text/css" href="../css/nav.css">
 	<link rel="stylesheet" type="text/css" href="../css/books.css">
@@ -34,8 +34,8 @@
 				</li>
 		
 				<li><a href="../otros/about.html">ABOUT</a></li>
-				<li><a href="">CONTACT</a></li>
-				<li><a href="">FAQ</a></li>
+				<li><a href="../otros/contact.html">CONTACT</a></li>
+				<li><a href="../otros/faq.html">FAQ</a></li>
 					
 			</ul>
 
