--- a/otros/about.html
+++ b/otros/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <html></html>
+<!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=0.01">
@@ -8,6 +8,8 @@
 	</title>
 </head>	
 <link rel="stylesheet" type="text/css" href="../css/about.css">
+<link rel="stylesheet" type="text/css" href="../css/media.css">
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 <body>
 	<header>
@@ -26,21 +28,75 @@
 						<li><a href="../tops/tech.html">TECH</a></li>
 
 					</ul>
-				</li>
-			
 				
 				<li><a href="about.html">ABOUT</a></li>
-				<li><a href="">CONTACT</a></li>
-				<li><a href="">FAQ</a></li>
+				<li><a href="contact.html">CONTACT</a></li>
+				<li><a href="faq.html">FAQ</a></li>
 					
 			</ul>
 
 		</div>
+<div class="hero">
+			<h1>FOLLOW US!</h1>
 
+  </div>
+	
 		
 		
 	</header>
 
+<section class="media">
+			<ul>
+ 		<li>
+ 			<a href="#">
+ 				<span></span>
+ 				<span></span>
+ 				<span></span>
+ 				<span></span>
+ 				<i class="fa fa-facebook" aria-hidden="true"></i>
+ 			</a>
+ 		</li>
+ 		<li>
+ 			<a href="#">
+ 				<span></span>
+ 				<span></span>
+ 				<span></span>
+ 				<span></span>
+ 				<i class="fa fa-twitter" aria-hidden="true"></i>
+ 			</a>
+ 		</li>
+ 		<li>
+ 			<a href="#">
+ 				<span></span>
+ 				<span></span>
+ 				<span></span>
+ 				<span></span>
+ 				<i class="fa fa-google-plus" aria-hidden="true"></i>
+ 			</a>
+ 		</li>
+ 		<li>
+ 			<a href="#">
+ 				<span></span>
+ 				<span></span>
+ 				<span></span>
+ 				<span></span>
+ 				<i class="fa fa-youtube" aria-hidden="true"></i>
+
+ 			</a>
+ 		</li>
+ 		<li>
+ 		<a href="#">	
+
+ 				<span></span>
+ 				<span></span>
+ 				<span></span>
+ 				<span></span>
+ 				<i class="fa fa-instagram" aria-hidden="true"></i>
+ 			</a>
+ 		</li>
+ 	</ul>
+
+</section>
 
 
 
