--- a/tops/music.html
+++ b/tops/music.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <html></html>
+<!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=0.01">
@@ -35,8 +35,8 @@
 			
 				
 				<li><a href="../otros/about.html">ABOUT</a></li>
-				<li><a href="">CONTACT</a></li>
-				<li><a href="">FAQ</a></li>
+				<li><a href="../otros/contact.html">CONTACT</a></li>
+				<li><a href="../otros/faq.html">FAQ</a></li>
 					
 			</ul>
 
