--- a/tops/tops.html
+++ b/tops/tops.html
@@ -1,10 +1,11 @@
-<!DOCTYPE <html></html>
+<!DOCTYPE html>
+
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=0.01">
 <head>
 	<title>
-	FOOD
+	TOPS
 	</title>
 	<link rel="stylesheet" type="text/css" href="../css/nav.css">
 	
@@ -34,14 +35,14 @@
 			
 				
 				<li><a href="../otros/about.html">ABOUT</a></li>
-				<li><a href="">CONTACT</a></li>
-				<li><a href="">FAQ</a></li>
+				<li><a href="../otros/contact.html">CONTACT</a></li>
+				<li><a href="../otros/faq.html">FAQ</a></li>
 					
 			</ul>
 
 		</div>
 	<div class="hero">
-			<h1>BEST TOPS</h1>
+			<h1>TOPS</h1>
 			<div class="tops">
 				<ul>
 						<li><a href="food.html">FOOD</a></li>
